# 3d-engine

./: Build.bat  CMakeLists.txt
includes/: Camera.h  Editor.h  Input.h  Logger.h  OGL.h  Shader.h  Timer.h
includes/imgui/: CMakeLists.txt
shaders/: triangle.fs  triangle.vs
src/: Camera.cpp  Editor.cpp  Input.cpp  Logger.cpp  OGL.cpp  Shader.cpp  Timer.cpp
